// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ContentStateIcon ui empty: Component: ContentStateIcon => empty 1`] = `
<div
  className="text-center"
>
  <div
    className="content-state empty"
  >
    <div
      className="state-icons"
    >
      <i
        className="material-icons"
      >
        folder_open
      </i>
      <i
        className="material-icons"
      >
        add
      </i>
      <i
        className="material-icons"
      >
        radio_button_unchecked
      </i>
      <i
        className="material-icons"
      >
        laptop
      </i>
      <i
        className="material-icons"
      >
        add
      </i>
      <i
        className="material-icons"
      >
        radio_button_unchecked
      </i>
      <i
        className="material-icons"
      >
        photo
      </i>
    </div>
  </div>
  <h4>
    title
  </h4>
  <h6
    className="text-muted mb-3"
  >
    subtitle
  </h6>
</div>
`;

exports[`Component: ContentStateIcon ui error: Component: ContentStateIcon => error 1`] = `
<div
  className="text-center"
>
  <div
    className="content-state error"
  >
    <div
      className="state-icons"
    >
      <i
        className="material-icons"
      >
        folder_open
      </i>
      <i
        className="material-icons"
      >
        add
      </i>
      <i
        className="material-icons"
      >
        radio_button_unchecked
      </i>
      <i
        className="material-icons"
      >
        sentiment_very_dissatisfied
      </i>
      <i
        className="material-icons"
      >
        add
      </i>
      <i
        className="material-icons"
      >
        radio_button_unchecked
      </i>
      <i
        className="material-icons"
      >
        photo
      </i>
    </div>
  </div>
  <h4>
    title
  </h4>
  <h6
    className="text-muted mb-3"
  >
    subtitle
  </h6>
</div>
`;

exports[`Component: ContentStateIcon ui no-results: Component: ContentStateIcon => no-results 1`] = `
<div
  className="text-center"
>
  <div
    className="content-state no-results"
  >
    <div
      className="state-icons"
    >
      <i
        className="material-icons"
      >
        folder_open
      </i>
      <i
        className="material-icons"
      >
        add
      </i>
      <i
        className="material-icons"
      >
        radio_button_unchecked
      </i>
      <i
        className="material-icons"
      >
        search
      </i>
      <i
        className="material-icons"
      >
        add
      </i>
      <i
        className="material-icons"
      >
        radio_button_unchecked
      </i>
      <i
        className="material-icons"
      >
        photo
      </i>
    </div>
  </div>
  <h4>
    title
  </h4>
  <h6
    className="text-muted mb-3"
  >
    subtitle
  </h6>
</div>
`;
